--- a/index.html
+++ b/index.html
@@ -1,52 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home</title>
-        <!-- CSS only -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-            crossorigin="anonymous">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-        <!-- JavaScript Bundle with Popper -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
-        <link href="css/style.css" rel="stylesheet">
-    </head>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    <link href="css/style.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
+</head>
 
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
-                    <div class="d-grid">
-                        <button type="button" class="btn btn-primary btn-block">Siwagon</button>
-                    </div>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
+                <div class="d-grid">
+                    <button type="button" class="btn btn-primary btn-block">Siwagon</button>
                 </div>
-                <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
-                    <div class="d-grid">
-                        <button type="button" class="btn btn-primary btn-block">Wongchan</button>
-                    </div>
+            </div>
+            <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
+                <div class="d-grid">
+                    <button type="button" class="btn btn-primary btn-block">Wongchan</button>
                 </div>
-                <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
-                    <div class="d-grid">
-                        <button type="button" class="btn btn-primary btn-block">12</button>
-                    </div>
+            </div>
+            <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
+                <div class="d-grid">
+                    <button type="button" class="btn btn-primary btn-block">12</button>
                 </div>
-                <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
-                    <div class="d-grid">
-                        <button type="button" class="btn btn-primary btn-block">Oat</button>
-                    </div>
+            </div>
+            <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
+                <div class="d-grid">
+                    <button type="button" class="btn btn-primary btn-block">Oat</button>
                 </div>
             </div>
         </div>
-        
-    </body>
-
+    </div>
+    <div class="container">
+        <div class="card">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+                <table id="example" class="table table-striped" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Position</th>
+                            <th>Office</th>
+                            <th>Age</th>
+                            <th>Start date</th>
+                            <th>Salary</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Tiger Nixon</td>
+                            <td>System Architect</td>
+                            <td>Edinburgh</td>
+                            <td>61</td>
+                            <td>2011-04-25</td>
+                            <td>$320,800</td>
+                        </tr>
+                        <tr>
+                            <td>Garrett Winters</td>
+                            <td>Accountant</td>
+                            <td>Tokyo</td>
+                            <td>63</td>
+                            <td>2011-07-25</td>
+                            <td>$170,750</td>
+                        </tr>
+                        <tr>
+                            <td>Ashton Cox</td>
+                            <td>Junior Technical Author</td>
+                            <td>San Francisco</td>
+                            <td>66</td>
+                            <td>2009-01-12</td>
+                            <td>$86,000</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <th>Name</th>
+                            <th>Position</th>
+                            <th>Office</th>
+                            <th>Age</th>
+                            <th>Start date</th>
+                            <th>Salary</th>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+            <div class="card-footer">Footer</div>
+        </div>
+    </div>
+</body>
+<script>
+    $(document).ready(function () {
+        $('#example').DataTable();
+    });
+</script>
 </html>
