--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="d-grid">
                     <button type="button" class="btn btn-primary btn-block">Siwagon</button>
                 </div>
             </div>
-            <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="d-grid">
                     <button type="button" class="btn btn-primary btn-block">Wongchan</button>
                 </div>
             </div>
-            <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="d-grid">
                     <button type="button" class="btn btn-primary btn-block">12</button>
                 </div>
             </div>
-            <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="d-grid">
                     <button type="button" class="btn btn-primary btn-block">Oat</button>
                 </div>
@@ -64,28 +64,44 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Tiger Nixon</td>
-                            <td>System Architect</td>
-                            <td>Edinburgh</td>
-                            <td>61</td>
-                            <td>2011-04-25</td>
-                            <td>$320,800</td>
+                            <td>Thanayut Jingmak</td>
+                            <td>Student</td>
+                            <td>Lannapoly</td>
+                            <td>19</td>
+                            <td>2003-03-11</td>
+                            <td>$5</td>
                         </tr>
                         <tr>
-                            <td>Garrett Winters</td>
-                            <td>Accountant</td>
-                            <td>Tokyo</td>
-                            <td>63</td>
-                            <td>2011-07-25</td>
-                            <td>$170,750</td>
+                            <td>Kanoot Boonsri</td>
+                            <td>CEO Lannapoly</td>
+                            <td>Lannapoly</td>
+                            <td>19</td>
+                            <td>2003-03-21</td>
+                            <td>$1000,000,000</td>
                         </tr>
                         <tr>
-                            <td>Ashton Cox</td>
-                            <td>Junior Technical Author</td>
-                            <td>San Francisco</td>
-                            <td>66</td>
-                            <td>2009-01-12</td>
-                            <td>$86,000</td>
+                            <td>Chaloemwud</td>
+                            <td>Student</td>
+                            <td>chiangmai</td>
+                            <td>19</td>
+                            <td>2077-20-35</td>
+                            <td>$100000000000000000000000000000000000000000000000000000000000</td>
+                        </tr>
+                        <tr>
+                            <td>Kittiphon panchong</td>
+                            <td>Student</td>
+                            <td>chiangmai</td>
+                            <td>20</td>
+                            <td>2002-02-22</td>
+                            <td>$10</td>
+                        </tr>
+                        <tr>
+                            <td>Siwagon Wonchan</td>
+                            <td>Student</td>
+                            <td>chiangmai</td>
+                            <td>20</td>
+                            <td>2002-06-13</td>
+                            <td>$10000</td>
                         </tr>
                     </tbody>
                     <tfoot>
