--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="d-grid">
-                    <button type="button" class="btn btn-primary btn-block">Wongchan</button>
+                    <button type="button" class="btn btn-warning btn-block">Wongchan</button>
                 </div>
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="d-grid">
-                    <button type="button" class="btn btn-primary btn-block">12</button>
+                    <button type="button" class="btn btn-danger btn-block">12</button>
                 </div>
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="d-grid">
-                    <button type="button" class="btn btn-primary btn-block">Oat</button>
+                    <button type="button" class="btn btn-info btn-block">Oat</button>
                 </div>
             </div>
         </div>
@@ -96,12 +96,20 @@
                             <td>$10</td>
                         </tr>
                         <tr>
-                            <td>Siwagon Wonchan</td>
+                            <td>Wacharin Koot</td>
                             <td>Student</td>
                             <td>chiangmai</td>
                             <td>20</td>
-                            <td>2002-06-13</td>
+                            <td>2002-0-13</td>
                             <td>$10000</td>
+                        </tr>
+                        <tr>
+                            <td>Wacharin Koonyotying</td>
+                            <td>Chef</td>
+                            <td>Chiangmai</td>
+                            <td>20</td>
+                            <td>2002-11-08</td>
+                            <td>$750,000</td>
                         </tr>
                     </tbody>
                     <tfoot>
@@ -125,4 +133,5 @@
         $('#example').DataTable();
     });
 </script>
+
 </html>
